--- a/backend/.env
+++ b/backend/.env
@@ -7,9 +7,9 @@ CLOUDINARY_CLOUD_NAME = Test
 CLOUDINARY_API_KEY = 554968932483438
 CLOUDINARY_API_SECRET = JQNYFswEzWz_Ku0rIFS7PYXbkX4
 
-EMAIL_HOST =
-EMAIL_PORT =
-EMAIL_USER =
-EMAIL_PASS =
+EMAIL_HOST = lehcengrissi@gmail.com
+EMAIL_PORT = 587
+EMAIL_USER = lehcengrissi@gmail.com
+EMAIL_PASS = lahcengr
 
 NODE_ENV = development
