--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,7 @@
   },
   "type": "module",
   "keywords": [],
-  "author": "",
+  "author": "GRISSI LAHCEN",
   "license": "ISC",
   "description": "",
   "dependencies": {
@@ -16,7 +16,9 @@
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "http": "^0.0.1-security",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.19.3",
+    "multer": "^2.0.2",
     "socket.io": "^4.8.1"
   },
   "devDependencies": {
